--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -10,8 +10,10 @@ of the Signature Service Support Library.
 * Bump SLF4J Simple Provider to 2.0.16.
 * Bump Jackson Databind to 2.17.2.
 * Bump Apache PDFBox to 2.0.32.
+* Bump Spring Context to 5.3.39.
 
 === Upgrade notes
+This release contains no breaking changes.
 
 == Version 2405.1
 
