--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -6,7 +6,7 @@ of the Signature Service Support Library.
 == Version 2503.1
 
 === Upgrade notes
-This release contains breaking changes.
+This release contains *breaking changes*.
 
 === Changes
 * Dependency on se.signatureservice.messages:signservice.messages library replaces org.certificateservices.messages:certservice-messages
