--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -9,7 +9,23 @@ of the Signature Service Support Library.
 Changes in preparation for moving to java 21 in Q4 2025
 
 === Changes
+* Updated the Gradle Wrapper files(gradlew, gradlew.bat, gradle-wrapper.jar) to align with the configured Gradle version.
 * Removed old test library org.codehaus.groovy.modules.http-builder:http-builder
+* Removed not related internal build logic from build.gradle.
+* Removed Joda-Time dependency in favor of standard java.time APIs.
+* Bump Apache XML Security For Java from 2.3.4 to 2.3.5
+* Bump SLF4J from 2.0.16 to 2.0.17
+* Bump se.signatureservice.configuration:signservice-messages to 2505.1.
+* Bump se.signatureservice.configuration:signservice-java-configuration to 2505.1.
+* Bump Jackson dependency from 2.18.3 to 2.19.0
+* Bump Jakarta Activation API from 2.0.0 to 2.1.3 to match that in Jakarta XML Binding API.
+* Bump Tomcat dependency used in testing from 10.1.39 to 10.1.40
+* Refactored SignTaskHelper to manage SystemTime via instance state instead of static members/parameters.
+* Fixed vulnerability CVE-2025-27820, derived from dependencies of eu.europa.ec.joinup.sd-dss:dss-service, by upgrading libraries:
+
+    org.apache.httpcomponents.client5:httpclient5 to 5.4.4
+    org.apache.httpcomponents.core5:httpcore5 to 5.3.4
+    org.apache.httpcomponents.core5:httpcore5-h2 to 5.3.4
 
 == Version 2503.1
 
