- certificate service stuff renamed to signservice - removed/moved duplicate methods/classes. - Removed unnecessary class license headers - Resolved some Qodana tasks - Addressed deprecated Gradle APIs - Updated Spock Framework Core Module to 2.4-M6-groovy-3.0

--- a/README.adoc
+++ b/README.adoc
@@ -506,7 +506,7 @@ be used.
 | ignoreMissingRevocationData(boolean ignoreMissingRevocationData)
 | Specify if missing revocation data should be ignored during validation.
 
-| messageSecurityProvider(org.certificateservices.messages.MessageSecurityProvider messageSecurityProvider)
+| messageSecurityProvider(se.signatureservice.message.MessageSecurityProvider messageSecurityProvider)
 | Specify a message security provider to use when signing requests and when verifying responses from central system.
 
 | messageSource(org.springframework.context.MessageSource messageSource)
