EIDDSS-1093 improve documentation

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -30,7 +30,7 @@ Changes in preparation for moving to java 21 in Q4 2025
 * Added support for overriding authnContextClassRefs settings in signservice-support-lib SupportServiceAPI.prepareSignature calls
 
     New method signatures for SupportServiceAPI.prepareSignature which take a 'authnContextClassRefs' parameter. The supplied list of strings
-    will override any profile- or metadata- settings, for that API call. As usual, the values must map to settings in the cental system.
+    will override any profile settings for 'authnContextClassRefs', for that API call. As usual, the values must map to settings in the cental system.
 
 == Version 2503.1
 
