--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -3,36 +3,41 @@
 This document provides information about changes that have been made for each new version
 of the Signature Service Support Library.
 
-== Version 2505.1
+== Version 2506.1
 
 === Upgrade notes
 Changes in preparation for moving to java 21 in Q4 2025
 
 === Changes
+* Bump Gradle to 7.6.5.
 * Updated the Gradle Wrapper files(gradlew, gradlew.bat, gradle-wrapper.jar) to align with the configured Gradle version.
-* Removed old test library org.codehaus.groovy.modules.http-builder:http-builder
+* Replaced old test library org.codehaus.groovy.modules.http-builder:http-builder in favor com.squareup.okhttp3:okhttp
 * Removed not related internal build logic from build.gradle.
 * Removed Joda-Time dependency in favor of standard java.time APIs.
 * Bump Apache XML Security For Java from 2.3.4 to 2.3.5
 * Bump SLF4J from 2.0.16 to 2.0.17
-* Bump se.signatureservice.configuration:signservice-messages to 2505.1.
-* Bump se.signatureservice.configuration:signservice-java-configuration to 2505.1.
-* Bump Jackson dependency from 2.18.3 to 2.19.0
+* Bump Groovy to 3.0.25
+* Bump Apache HttpClient to 5.5
+* Bump se.signatureservice.configuration:signservice-messages to 2506.1.
+* Bump se.signatureservice.configuration:signservice-java-configuration to 2506.1.
+* Bump Jackson dependency from 2.18.3 to 2.19.1
 * Bump Jakarta Activation API from 2.0.0 to 2.1.3 to match that in Jakarta XML Binding API.
-* Bump Tomcat dependency used in testing from 10.1.39 to 10.1.41
+* Bump Tomcat dependency used in testing from 10.1.39 to 10.1.42
 * Bump Spock Framework Core Module to 2.4-M6-groovy-3.0
-* Removed unnecessary com.squareup.okhttp3:okhttp and org.json:json dependency.
+* Removed unnecessary org.json:json dependency.
 * Refactored SignTaskHelper to manage SystemTime via instance state instead of static members/parameters.
 * Fixed vulnerability CVE-2025-27820, derived from dependencies of eu.europa.ec.joinup.sd-dss:dss-service, by upgrading libraries:
 
-    org.apache.httpcomponents.client5:httpclient5 to 5.4.4
+    org.apache.httpcomponents.client5:httpclient5 to 5.5
     org.apache.httpcomponents.core5:httpcore5 to 5.3.4
     org.apache.httpcomponents.core5:httpcore5-h2 to 5.3.4
 
 * Added support for overriding authnContextClassRefs settings in signservice-support-lib SupportServiceAPI.prepareSignature calls
 
     New method signatures for SupportServiceAPI.prepareSignature which take a 'authnContextClassRefs' parameter. The supplied list of strings
-    will override any profile settings for 'authnContextClassRefs', for that API call. As usual, the values must map to settings in the cental system.
+    will override any profile settings for 'authnContextClassRefs', for that API call. As usual, the values must map to settings in the central system.
+    There is also a utility class 'AuthnContextClassRefUtils' to help resolve higher levels of assurance, for some loa hierarchies, e.g. \http://id.elegnamnden.se/loa/1.0/loa(1|2|3|4).
+
 
 == Version 2503.1
 
