--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -9,6 +9,10 @@ of the Signature Service Support Library.
 
 * The eu.europa.ec.joinup.sd-dss library upgraded to version 6.3.
 * Default validation policy file that comes with this library updated to match the new eu.europa.ec.joinup.sd-dss version.
+* New signature algorithms enabled
+** SHA384withRSA
+** SHA384withECDSA
+** SHA512withECDSA
 
 == Version 2509.1
 
