--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -13,6 +13,15 @@ of the Signature Service Support Library.
 ** SHA384withRSA
 ** SHA384withECDSA
 ** SHA512withECDSA
+* Removed temporary security-related dependency overrides, as they are no longer required.
+* Dependency upgrades:
+** `se.signatureservice.configuration:signservice-messages` to `2512.1`
+** `se.signatureservice.configuration:signservice-java-configuration` to `2512.1`
+** `jakarta.xml.bind:jakarta.xml.bind-api` to `4.0.4`
+** `jakarta.activation:jakarta.activation-api` to `2.1.4`
+** `com.fasterxml.jackson.core:jackson-databind` to `2.20.1`
+** `org.apache.tomcat.embed:tomcat-embed-core` to `10.1.50`
+** `org.spockframework:spock-bom` to `2.4-groovy-3.0`
 
 === Dependency upgrades
 
