--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -3,6 +3,10 @@
 This document provides information about changes that have been made for each new version
 of the Signature Service Support Library.
 
+== Version 2512.2
+
+No changes.
+
 == Version 2512.1
 
 === Enhancements
