EIDDSS-1162 update changelogs

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -3,6 +3,12 @@
 This document provides information about changes that have been made for each new version
 of the Signature Service Support Library.
 
+== Version 2602.1
+
+=== Changes
+
+* Edited bundled validation policy, removing the iIDAS tag.
+
 == Version 2601.1
 
 === Upgrade notes
